--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.0.0-beta.3",
         "@mux/upchunk": "^3.5.0",
+        "@stripe/stripe-js": "^7.0.0",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.8.2",
         "autoprefixer": "^10.4.20",
